# state-sync

./: .gitignore  CONTRIBUTING.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  typedoc.json
.cargo/: config.toml
.changeset/: 0003-audit-fixes.md  README.md  add-throttle-persistence.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/state-sync/: Cargo.toml  README.md
crates/state-sync/src/: lib.rs
docs/: 404.md  architecture.md  comparison.md  compatibility.md  index.md  lifecycle.md  release-checklist.md  troubleshooting.md
docs/.vitepress/: apiSidebar.ts  config.ts
docs/.vitepress/theme/: HeroVideo.vue  InstallBlock.vue  Layout.vue  codeblockCollapse.ts  custom.css  index.ts  mermaidZoom.ts
docs/adapters/: adapter-authoring.md  pinia.md  svelte.md  valtio.md  vue.md  zustand.md
docs/api/: index.md
docs/api/core/: index.md
docs/api/persistence/: index.md
docs/api/pinia/: index.md
docs/api/svelte/: index.md
docs/api/tauri/: index.md
docs/api/valtio/: index.md
docs/api/vue/: index.md
docs/examples/: error-handling.md  index.md  persistence-migration.md  persistence-stack.md  react-zustand.md  source-of-truth.md  source-of-truth.ts  structured-logging.md  structured-logging.ts  throttling.md  tostate-mapping.md  vue-pinia-tauri.md
docs/guide/: custom-transports.md  multi-window.md  protocol.md  quickstart.md  writing-state.md
docs/iterations/: 0001-bootstrap-and-core-protocol.md  0002-production-readiness.md  0003-dx-observability-and-contract-hardening.md
docs/public/: robots.txt
(+115 files in other folders)
