[package]
name = "state-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
description = "Minimal primitives for revision-based state synchronization"
readme = "README.md"
repository = "https://github.com/777genius/state-sync"
keywords = ["state", "sync", "revision", "tauri"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
